# artcraft

./: CLAUDE.md  Cargo.toml  README
assets/: LICENSE.txt
src/: biome.rs  camera.rs  chunk.rs  crosshair.wgsl  light.rs  main.rs  mesh.rs  noise.rs  player.rs  shader.wgsl  sky.rs  skybox.wgsl  state.rs  texture.rs  ui.rs  ui.wgsl  worker.rs  world.rs
